--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "express-session": "^1.16.2",
+    "if-env": "^1.0.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "session": "^0.1.0"
   }
 }
