--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "express-session": "^1.16.2",
     "if-env": "^1.0.4",
+    "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0"
