--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^6.3.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-images-upload": "^1.2.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^2.1.1"
   },
