--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "express-session": "^1.16.2",
+    "firebase": "^6.3.4",
     "if-env": "^1.0.4",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react-images-upload": "^1.2.7",
     "session": "^0.1.0"
   }
 }
-
-
-
