--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.16.2",
     "firebase": "^6.3.4",
     "if-env": "^1.0.4",
+    "materialize": "^1.0.0",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
