--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "express-session": "^1.16.2",
+    "filepond": "^4.4.12",
+    "filepond-plugin-image-exif-orientation": "^1.0.6",
+    "filepond-plugin-image-preview": "^4.2.1",
     "firebase": "^6.3.4",
     "if-env": "^1.0.4",
     "materialize": "^1.0.0",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react-filepond": "^7.0.1",
     "react-images-upload": "^1.2.7",
     "sequelize": "^5.12.3",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "shortid": "^2.2.14"
   }
 }
