--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "if-env": "^1.0.4",
     "materialize": "^1.0.0",
     "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react-filepond": "^7.0.1",
