--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "firebase": "^6.3.4",
+    "prop-types": "^15.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-images-upload": "^1.2.7",
