--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react-filepond": "^7.0.1",
     "react-images-upload": "^1.2.7",
     "sequelize": "^5.12.3",
