--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.6",
     "filepond-plugin-image-preview": "^4.2.1",
     "firebase": "^6.3.4",
+    "firebase-app": "0.0.1",
     "if-env": "^1.0.4",
     "materialize": "^1.0.0",
     "mysql": "^2.17.1",
@@ -35,6 +36,8 @@
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
     "react-filepond": "^7.0.1",
+    "react-grid-gallery": "^0.5.5",
+    "react-image-gallery": "^0.8.18",
     "react-images-upload": "^1.2.7",
     "sequelize": "^5.12.3",
     "session": "^0.1.0",
