--- a/package.json
+++ b/package.json
@@ -35,9 +35,14 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
+    "react-avatar-edit": "^0.8.3",
     "react-filepond": "^7.0.1",
+    "react-images": "^1.0.0",
     "react-images-upload": "^1.2.7",
+    "react-photo-gallery": "6.2.1",
     "react-router": "^5.0.1",
+    "react-sizeme": "^2.6.7",
+    "react-stack-grid": "^0.7.1",
     "sequelize": "^5.12.3",
     "session": "^0.1.0",
     "shortid": "^2.2.14"
