--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-stack-grid": "^0.7.1",
     "sequelize": "^5.12.3",
     "session": "^0.1.0",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "twilio": "^3.33.3"
   }
 }
