--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-image-lightbox": "^5.1.0",
     "react-images": "^1.0.0",
     "react-images-upload": "^1.2.7",
+    "react-moment": "^0.9.2",
     "react-photo-gallery": "6.2.1",
     "react-router": "^5.0.1",
     "react-sizeme": "^2.6.7",
