--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "firebase": "^6.3.4",
+    "materialize-css": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-image-lightbox": "^5.1.0",
+    "react-materialize": "^3.3.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^2.1.1"
   },
