--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-image-lightbox": "^5.1.0",
     "react-images": "^1.0.0",
     "react-images-upload": "^1.2.7",
+    "react-materialize": "^3.3.4",
     "react-moment": "^0.9.2",
     "react-photo-gallery": "6.2.1",
     "react-router": "^5.0.1",
